- 
    Bug 
- 
    Resolution: Fixed
- 
    P1: Critical 
- 
    6.2.6, 6.3.0 Beta2, 6.4.0
- 
        26cd43f02 (dev), 23ce8a110 (6.5), ff1953617 (6.4), dc8f44b14 (dev), 7eee2ffec (6.4), 93f99ba81 (6.5), a21b91c99 (tqtc/lts-6.2), b9565b3af (tqtc/lts-6.2)
In a simple test project where a QQuickWidget is used to display an item containing a Popup and a Button in the Popup, the button will receive touch begin but never a touch end event. Clicking with a mouse works fine (press & release received).
The problem does not seem to occur in 5.15.8 at all.
import QtQuick 2.15 import QtQuick.Controls 2.15 Item { width: 640 height: 480 visible: true Popup { closePolicy: Popup.NoAutoClose visible: true width: 640 height: 480 Button { text: "TAP ME" anchors.fill: parent onPressed: { console.log( "Button onPressed") ; } onReleased: { console.log( "Button onReleased") ; } onClicked: { console.log( "Button onClicked") ; } } } }
Steps to reproduce the problem:
- Run the attached example
- Tap on the button
- is duplicated by
- 
                    QTBUG-109951 Touch end event not triggered for MultiPointInputArea in Listview and in QQuickWidget -         
- Closed
 
-         
- relates to
- 
                    QTBUG-101748 QQuickWidget - touch misbehaving badly with overlapping handlers hieararchy -         
- Closed
 
-         
- 
                    QTBUG-113558 QQuickWidget does not handle touch event via QML TapHandler correctly -         
- Closed
 
-         
- replaces
- 
                    QTBUG-86729 many Qt Quick test failures after input event refactoring -         
- Closed
 
-         
- resulted in
- 
                    QTBUG-113384 QQuickWidget - touchpad click not working after scrolling -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-101736 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 401175,4 | Fix and un-blacklist tst_qquickwidget::synthMouseFromTouch | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 401321,5 | Test MouseArea in QQuickWidget | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 419885,2 | Fix and un-blacklist tst_qquickwidget::synthMouseFromTouch | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 419886,2 | Fix and un-blacklist tst_qquickwidget::synthMouseFromTouch | 6.3 | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 419889,2 | Fix and un-blacklist tst_qquickwidget::synthMouseFromTouch | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 | 
| 448653,6 | QQuickWidget: always accept touch events and grabbed event points | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 449360,2 | Test MouseArea in QQuickWidget | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 449361,2 | Test MouseArea in QQuickWidget | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 449372,3 | Test MouseArea in QQuickWidget | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 | 
| 450353,2 | QQuickWidget: always accept touch events and grabbed event points | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 450354,2 | QQuickWidget: always accept touch events and grabbed event points | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 | 
| 450401,3 | QQuickWidget: always accept touch events and grabbed event points | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |